# reanalyze

./: DVA.md  LICENSE  README.md  create-release.sh  dune-project  package-lock.json  package.json  redder.opam
examples/deadcode/: bsconfig.json  package-lock.json  package.json
examples/deadcode/src/: deadcode.txt
scripts/: bump_version_module.js  download_dist.js  prepare_release.js  run_integration_tests.js
src/: Closure.ml  ClosureAnalysis.ml  Common.ml  DVA.ml  DVACommon.ml  DeadCode.ml  DeadCommon.ml  DeadValue.ml  Live.ml  Paths.ml  PrimResolution.ml  Print.ml  PrintSE.ml  Reanalyze.ml  Redder.ml  RunConfig.ml  SetExpression.ml  ValueDependency.ml  Version.ml  dune
